# lms-toolkit

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml  run.sh  spec.md
.claude/: settings.json
.claude/hooks/: check-docs-before-commit.sh
src/: __init__.py  auto_watch.py  user_setting.py
src/audio_pipeline/: converter.py  pipeline.py  transcriber.py
src/auto_watch/: __main__.py  browser.py  cli.py  config.py  courses.py  log.py  main.py  player.py  plugin.py  provider.py  transcription.py  types.py
src/auto_watch/providers/: kcu.py  ssu.py
src/gui/config/: settings.py
src/gui/core/: file_manager.py  module_loader.py  validators.py
src/gui/ui/windows/: main_window.py
src/gui/workers/: processing_worker.py
src/summarize_pipeline/: pipeline.py  summarizer.py
src/video_pipeline/: download_video.py  login.py  pipeline.py  video_parser.py
tests/: conftest.py  test_cli.py  test_config.py  test_main_args.py
